--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "axios": "~0.19.2",
+    "dotenv-flow": "~3.1.0",
     "fastify": "~2.13.0",
     "mongodb": "~3.5.5",
     "mongoose": "~5.9.7"
