Add Cat example.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,13 @@
 {
   "extends": ["plugin:jest/all", "standard", "prettier-standard"],
-  "plugins": ["jest"]
+  "plugins": ["jest"],
+  "rules": {
+    "jest/lowercase-name": [
+      "error",
+      {
+        "allowedPrefixes": ["GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS"]
+      }
+    ],
+    "jest/no-hooks": 0
+  }
 }
