--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,4 +11,4 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Launch test with Jest
-      run: npm run test
+      run: npm test
