--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,21 +3,12 @@ name: Check coding style and lint code
 on: ['push', 'pull_request']
 
 jobs:
-  lint-json:
+  lint:
     runs-on: ubuntu-18.04
 
     steps:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: npm install
-    - name: "JSON: check coding style with Prettier"
-      run: npm run lint:json
-  lint-js:
-    runs-on: ubuntu-18.04
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: npm install
-    - name: "JavaScript: check coding style and lint with ESLint (Prettier + StandardJS)"
-      run: npm run lint:js
+    - name: Check coding style and lint code
+      run: npm run lint
