--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "test:all": "jest --all",
     "deps:check": "npm-check",
     "deps:upgrade": "npm-check -u",
+    "lint": "npm-run-all lint:*",
     "lint:json": "prettier --check \"./**/*.json\"",
     "lint:js": "eslint \"./**/*.js\"",
+    "format": "npm-run-all format:*",
     "format:json": "prettier --write \"./**/*.json\"",
     "format:js": "eslint --fix \"./**/*.js\""
   },
@@ -32,7 +34,8 @@
     "dotenv-flow": "~3.1.0",
     "fastify": "~2.13.0",
     "mongodb": "~3.5.5",
-    "mongoose": "~5.9.7"
+    "mongoose": "~5.9.7",
+    "npm-run-all": "~4.1.5"
   },
   "devDependencies": {
     "axios-mock-adapter": "~1.18.1",
