--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "deps:check": "npm-check",
     "deps:upgrade": "npm-check -u",
     "lint": "npm-run-all lint:*",
-    "lint:json": "prettier --check \"./**/*.json\"",
     "lint:js": "eslint \"./**/*.js\"",
+    "lint:json": "prettier --check \"./**/*.json\"",
+    "lint:md": "markdownlint \"./**/*.md\" --ignore ./node_modules",
+    "lint:yml": "prettier --check \"./**/*.yml\"",
     "format": "npm-run-all format:*",
     "format:json": "prettier --write \"./**/*.json\"",
-    "format:js": "eslint --fix \"./**/*.js\""
+    "format:js": "eslint --fix \"./**/*.js\"",
+    "format:md": "markdownlint --fix \"./**/*.md\" --ignore ./node_modules",
+    "format:yml": "prettier --write \"./**/*.yml\""
   },
   "lint-staged": {
     "./**/*.json": [
@@ -52,6 +56,8 @@
     "husky": "~4.2.3",
     "jest": "~25.2.7",
     "lint-staged": "~10.1.2",
+    "markdownlint": "~0.19.0",
+    "markdownlint-cli": "~0.22.0",
     "mongodb-memory-server": "~6.5.2",
     "nodemon": "~2.0.2",
     "npm-check": "~5.9.2",
