--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,11 +5,6 @@
     "source.fixAll.markdownlint": true
   },
   "editor.formatOnSave": true,
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[yaml]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "prettier.disableLanguages": ["javascript", "markdown"]
 }
