Add option to pass test if none is found.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon ./src/index.js",
     "test": "jest --onlyChanged --watch",
-    "test:all": "jest --all",
+    "test:all": "jest --all --passWithNoTests",
     "deps:check": "npm-check",
     "deps:upgrade": "npm-check -u",
     "lint": "npm-run-all lint:*",
