--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "repository": "git@github.com:RomainFallet/fastify-starter.git",
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "test": "jest --onlyChanged --watch",
-    "test:all": "jest --all --passWithNoTests",
+    "test": "is-ci test:all test:watch",
+    "test:watch": "jest --watch",
+    "test:all": "jest --passWithNoTests",
     "deps:check": "npm-check",
     "deps:upgrade": "npm-check -u",
     "lint": "npm-run-all lint:*",
@@ -60,6 +61,7 @@
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-standard": "~4.0.1",
     "husky": "~4.2.3",
+    "is-ci-cli": "~2.0.0",
     "jest": "~25.2.7",
     "lint-staged": "~10.1.2",
     "markdownlint": "~0.19.0",
