--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,23 +3,7 @@
   "overrides": [
     {
       "files": ["./src/**/*.test.js"],
-      "extends": "plugin:jest/all",
-      "rules": {
-        "jest/no-hooks": 0,
-        "jest/lowercase-name": [
-          "error",
-          {
-            "allowedPrefixes": [
-              "GET",
-              "POST",
-              "PATCH",
-              "PUT",
-              "DELETE",
-              "OPTIONS"
-            ]
-          }
-        ]
-      }
+      "extends": "plugin:jest/all"
     }
   ],
   "plugins": ["jest"]
