--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,7 +13,7 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          path: ./node_modules
+          path: ~/.npm
           key: ${{ env.cache-name }}-${{ hashFiles('./package-lock.json') }}
           restore-keys: ${{ env.cache-name }}-
       - name: Install dependencies
